--- a/style.css
+++ b/style.css
@@ -66,3 +66,35 @@ body
 {
     padding: 20px;
 }
+.hero-text
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.quote
+{   
+    color: #1F2937;
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-family: "italic";
+    font-weight: light;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 100px;
+
+}
+
+.action
+{   width: 1000px;
+    align-self: center;
+    flex: 0 1 100px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
