--- a/style.css
+++ b/style.css
@@ -14,14 +14,23 @@ body
     display: flex;
 
 }
-.images img, button
+.header-logo, .links
 {
-    border-radius: 20px;
+    margin: 0px 200px 0px 200px;
+}
+
+.header-logo
+{
+    color: #f9faf8;
+    font-size: 24px;
 }
 .images img
 {
+    border: 3px solid #3882f6;
+    border-radius: 20px;
     width: 160px;
     height: 160px;
+
 }
 
 .info,.images
@@ -33,8 +42,14 @@ body
 .info
 {   
     flex-direction: column;
+    padding: 100px;
 }
-
+.info h2
+{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
 .images
 {
   gap: 50px;
@@ -51,12 +66,18 @@ body
 {
     display: flex;
     justify-content: center;
+    padding: 70px;
+    gap: 100px;
 }
 
 .hero img
 {
     width: 400px;
     height: 150px;
+}
+.hero-text button
+{
+    border-style: none;
 }
 .foot
 {
@@ -71,13 +92,13 @@ body
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .quote
 {   
     color: #1F2937;
     background-color: #e5e7eb;
-    font-size: 36px;
     font-family: "italic";
     font-weight: light;
     display: flex;
@@ -85,10 +106,19 @@ body
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 100px;
+    padding: 100px 300px 100px 300px;
 
 }
-
+.quote-text
+{
+    font-size: 36px;
+}
+.quote-author
+{
+    font-size: 20px;
+    font-weight: bolder;
+    align-self: flex-end;
+}
 .action
 {   width: 1000px;
     align-self: center;
@@ -96,5 +126,32 @@ body
     background-color: #3882f6;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    border-radius: 10px;
+    color: white;
+}
+.action-text, .action-button
+{
+    margin: 0px 50px 0px 50px;
+}
+
+button
+{
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    color: white;
+    background-color: #3882f6;
+}
+.action-button
+{ 
+    
+    border: 2px solid white;
+}
+
+.footer
+{
+    justify-content: center;
     align-items: center;
 }
